initial website commit

--- a/index.html
+++ b/index.html
@@ -86,5 +86,5 @@
       <table id="preview"></table>
     </div>
   </div>
-</body>
+<script type="text/javascript" src="build.js"></script></body>
 </html>
