update paypal logo

--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
             href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VG6YBJ2R8MH4E"
             target="_blank"
             ><img
-              src="./src/images/donate.png"
-              border="0"
+              src="https://www.paypalobjects.com/digitalassets/c/website/marketing/apac/C2/logos-buttons/optimize/Full_Online_Tray_RGB.png"
               name="submit"
               alt="PayPal – The safer, easier way to pay online."
           /></a>
@@ -120,6 +119,5 @@
         <table id="preview"></table>
       </div>
     </div>
-    <script type="text/javascript" src="build.js"></script>
   </body>
 </html>
